-corrected spacing on the sidenav for the contact admin link

--- a/src/main/resources/static/css/runshare.css
+++ b/src/main/resources/static/css/runshare.css
@@ -278,7 +278,9 @@ body {
     .homeMenuDropdown, .runnerMenuDropdown,
     .commentsMenuDropdown, .trailMenuDropdown,
     .runSessionMenuDropdown, .loginMenuDropdown,
-    .runnerMenu, .commentsMenu, .trailMenu, .runSessionMenu {
+    .runnerMenu, .commentsMenu, .trailMenu, .runSessionMenu,
+    .contactAdminDropdown
+     {
          text-align:center;
      }
     .dropMenuHeader {
